--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
   }
 body,html{
+    height: 100%;
     font-family: 'Merriweather', serif;
     font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
@@ -13,12 +14,22 @@ body,html{
     margin: 0;
     padding: 0;
 }
-html, body { height: 100%; }
-html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 .blue-snackbar {
     --mdc-snackbar-container-color: #FFC93C;
     --mat-mdc-snack-bar-button-color: #fff
     --mdc-snackbar-supporting-text-color: #fff;
   }
+
+@media only screen and (max-width: 850px) {
+  body,html{
+    height:auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+}
